--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
                                 <h1>MY TEAM</h1>
                             </header>
 
-                            
+                            <div class="card">
+                                undefined
+                            </div>
 
+                            <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
                             <script src="../index.js"></script>
                         </body>
                         </html>
